--- a/01-fundamentos-de-programacion/piedra_papel_tijera/index.html
+++ b/01-fundamentos-de-programacion/piedra_papel_tijera/index.html
@@ -12,30 +12,26 @@
         function aleatorio(min,max) {
             return Math.floor(Math.random() *(max - min + 1) + min);
         }
+
+        function eleccion( jugada ) {
+            if ( jugada == 1 ) {
+                return "Piedra 🥌";
+            } else if ( jugada == 2 ) {
+                return "Papel 📄";
+            } else if ( jugada == 3 ) {
+                return "Tijera ✂";
+            } else {
+                return "Error";
+            }
+        }
+
         // 1 es piedra, 2 es papel, 3 es tijera
         let jugador = 0;
         let pc = aleatorio(1,3);
         jugador = prompt("Elige: 1 para piedra, 2 para papel, 3 para tijera");
 
-        if ( jugador == 1 ) {
-            alert("Elegiste 🥌");
-        } else if ( jugador == 2 ) {
-            alert("Elegiste 📄")
-        } else if ( jugador == 3 ) {
-            alert("Elegiste ✂")
-        } else {
-            alert("Elegiste PERDER")
-        }
-
-        if ( pc == 1 ) {
-            alert("PC Elige 🥌");
-        } else if ( pc == 2 ) {
-            alert("PC Elige 📄")
-        } else if ( pc == 3 ) {
-            alert("PC Elige ✂")
-        } else {
-            alert("PC Elige PERDER")
-        }
+        alert("PC elige: " + eleccion(pc));
+        alert("Jugador elige: " + eleccion(jugador));
 
         // COMBATE
         if ( pc == jugador ) {
