--- a/01-fundamentos-de-programacion/mokepon/mokepon.html
+++ b/01-fundamentos-de-programacion/mokepon/mokepon.html
@@ -11,7 +11,30 @@
         <section id="character-select">
             <h2>Elige tu mascota:</h2>
 
-            MASCOTAS
+            <input type="radio" name="mascota" id="hipoge" >
+            <label for="hipoge">Hipoge</label><br>
+
+            <input type="radio" name="mascota" id="capipepo" >
+            <label for="capipepo">Capipepo</label><br>
+
+            <input type="radio" name="mascota" id="Ratigueya" >
+            <label for="Ratigueya">Ratigueya</label><br>
+
+            <input type="radio" name="mascota" id="langostelvis">
+            <label for="langostelvis">Langostelvis</label><br>
+
+            <input type="radio" name="mascota" id="tucapalma">
+            <label for="tucapalma">Tucapalma</label><br>
+
+            <input type="radio" name="mascota" id="pydos">
+            <label for="pydos">Pydos</label><br>
+
+            <!-- Hipoge -> Agua
+            Capipepo -> Tierra
+            Ratigueya -> Fuego
+            Langostelvis -> Agua y Fuego
+            Tucapalma -> Agua y Tierra
+            Pydos -> Tierra y Fuego -->
 
             <button>Seleccionar</button>
         </section>
