--- a/01-fundamentos-de-programacion/mokepon/mokepon.html
+++ b/01-fundamentos-de-programacion/mokepon/mokepon.html
@@ -36,16 +36,16 @@
             Tucapalma -> Agua y Tierra
             Pydos -> Tierra y Fuego -->
 
-            <button>Seleccionar</button>
+            <button id="btn-pet" >Seleccionar</button>
         </section>
         <section id="attack-select">
             <h2>Elige tu ataque:</h2>
             <p>Tu mascota tiene <span>3</span> vidas</p>
             <p>La mascota del enemigo tiene <span>3</span> vidas</p>
             <p>
-                <button>Fuego 🔥</button>
-                <button>Agua 💧</button>
-                <button>Tierra 🌱</button>
+                <button id="btn-fire">Fuego 🔥</button>
+                <button id="btn-water">Agua 💧</button>
+                <button id="btn-ground">Tierra 🌱</button>
             </p>
         </section>
 
@@ -54,8 +54,8 @@
         </section>
 
         <section id="reiniciar">
-            <button>Reiniciar</button>
+            <button id="btn-reset">Reiniciar</button>
         </section>
-
+        <script src="./js/logica.js"></script>
     </body>
 </html>
