--- a/01-fundamentos-de-programacion/mokepon/mokepon.html
+++ b/01-fundamentos-de-programacion/mokepon/mokepon.html
@@ -11,22 +11,22 @@
         <section id="character-select">
             <h2>Elige tu mascota:</h2>
 
-            <input type="radio" name="mascota" id="hipoge" >
+            <input type="radio" name="mascota" id="hipoge"  class="pets" value="hipoge">
             <label for="hipoge">Hipoge</label><br>
 
-            <input type="radio" name="mascota" id="capipepo" >
+            <input type="radio" name="mascota" id="capipepo"  class="pets" value="capipepo">
             <label for="capipepo">Capipepo</label><br>
 
-            <input type="radio" name="mascota" id="Ratigueya" >
-            <label for="Ratigueya">Ratigueya</label><br>
+            <input type="radio" name="mascota" id="ratigueya"  class="pets" value="ratigueya">
+            <label for="ratigueya">Ratigueya</label><br>
 
-            <input type="radio" name="mascota" id="langostelvis">
+            <input type="radio" name="mascota" id="langostelvis" class="pets" value="langostelvis">
             <label for="langostelvis">Langostelvis</label><br>
 
-            <input type="radio" name="mascota" id="tucapalma">
+            <input type="radio" name="mascota" id="tucapalma" class="pets" value="tucapalma">
             <label for="tucapalma">Tucapalma</label><br>
 
-            <input type="radio" name="mascota" id="pydos">
+            <input type="radio" name="mascota" id="pydos" class="pets" value="pydos">
             <label for="pydos">Pydos</label><br>
 
             <!-- Hipoge -> Agua
