--- a/01-fundamentos-de-programacion/mokepon/mokepon.html
+++ b/01-fundamentos-de-programacion/mokepon/mokepon.html
@@ -41,7 +41,7 @@
         <section id="attack-select">
             <h2>Elige tu ataque:</h2>
             <p>Tu mascota <span id="pet-player"></span> tiene <span>3</span> vidas</p>
-            <p>La mascota del enemigo tiene <span>3</span> vidas</p>
+            <p>La mascota <span id="pet-enemy"></span> del enemigo tiene <span>3</span> vidas</p>
             <p>
                 <button id="btn-fire">Fuego 🔥</button>
                 <button id="btn-water">Agua 💧</button>
