--- a/01-fundamentos-de-programacion/mokepon/mokepon.html
+++ b/01-fundamentos-de-programacion/mokepon/mokepon.html
@@ -50,7 +50,7 @@
         </section>
 
         <section id="messages" >
-            <p>Tu mascota atacó con fuego, las mascota del enemigo atacó con tierra - GANASTE 🎉</p>
+            <!-- Tu mascota atacó con fuego, las mascota del enemigo atacó con tierra - GANASTE 🎉 -->
         </section>
 
         <section id="reiniciar">
