--- a/01-fundamentos-de-programacion/mokepon/mokepon.html
+++ b/01-fundamentos-de-programacion/mokepon/mokepon.html
@@ -53,7 +53,7 @@
             <!-- Tu mascota atacó con fuego, las mascota del enemigo atacó con tierra - GANASTE 🎉 -->
         </section>
 
-        <section id="reiniciar">
+        <section id="reset">
             <button id="btn-reset">Reiniciar</button>
         </section>
         <script src="./js/logica.js"></script>
