--- a/01-fundamentos-de-programacion/mokepon/mokepon.html
+++ b/01-fundamentos-de-programacion/mokepon/mokepon.html
@@ -4,9 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Mokepon!</title>
+        <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
-        <h1>MOKEPON! 🔥💧🌱</h1>
+        <h1 class="titulo" >MOKEPON! 🔥💧🌱</h1>
 
         <section id="character-select">
             <h2>Elige tu mascota:</h2>
