--- a/01-fundamentos-de-programacion/mokepon/mokepon.html
+++ b/01-fundamentos-de-programacion/mokepon/mokepon.html
@@ -7,9 +7,11 @@
         <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
-        <h1 class="titulo" >MOKEPON! 🔥💧🌱</h1>
+        <section class="section-title">
+            <h1 class="titulo" >MOKEPON! 🔥💧🌱</h1>
+        </section>
+        <section id="character-select" class="character-select-section">
 
-        <section id="character-select">
             <h2>Elige tu mascota:</h2>
 
             <input type="radio" name="mascota" id="hipoge"  class="pets" value="hipoge">
