--- a/01-fundamentos-de-programacion/mokepon/mokepon.html
+++ b/01-fundamentos-de-programacion/mokepon/mokepon.html
@@ -15,22 +15,22 @@
             <h2>Elige tu mascota:</h2>
 
             <input type="radio" name="mascota" id="hipoge"  class="pets" value="hipoge">
-            <label for="hipoge">Hipoge</label><br>
+            <label class="mokepon-card" for="hipoge">Hipoge</label><br>
 
             <input type="radio" name="mascota" id="capipepo"  class="pets" value="capipepo">
-            <label for="capipepo">Capipepo</label><br>
+            <label class="mokepon-card" for="capipepo">Capipepo</label><br>
 
             <input type="radio" name="mascota" id="ratigueya"  class="pets" value="ratigueya">
-            <label for="ratigueya">Ratigueya</label><br>
+            <label class="mokepon-card" for="ratigueya">Ratigueya</label><br>
 
             <input type="radio" name="mascota" id="langostelvis" class="pets" value="langostelvis">
-            <label for="langostelvis">Langostelvis</label><br>
+            <label class="mokepon-card" for="langostelvis">Langostelvis</label><br>
 
             <input type="radio" name="mascota" id="tucapalma" class="pets" value="tucapalma">
-            <label for="tucapalma">Tucapalma</label><br>
+            <label class="mokepon-card" for="tucapalma">Tucapalma</label><br>
 
             <input type="radio" name="mascota" id="pydos" class="pets" value="pydos">
-            <label for="pydos">Pydos</label><br>
+            <label class="mokepon-card" for="pydos">Pydos</label><br>
 
             <!-- Hipoge -> Agua
             Capipepo -> Tierra
@@ -39,7 +39,7 @@
             Tucapalma -> Agua y Tierra
             Pydos -> Tierra y Fuego -->
 
-            <button id="btn-pet" >Seleccionar</button>
+            <button id="btn-pet" class="btn-pet" >Seleccionar</button>
         </section>
         <section id="attack-select">
             <h2>Elige tu ataque:</h2>
