--- a/01-fundamentos-de-programacion/mokepon/mokepon.html
+++ b/01-fundamentos-de-programacion/mokepon/mokepon.html
@@ -65,13 +65,15 @@
             <button id="btn-pet" class="btn-pet">Seleccionar</button>
         </section>
 
-        <section id="attack-select">
-            <h2>Elige tu ataque:</h2>
+        <section id="attack-select" class="attack-select">
+            <h2 class="subtitle">Elige tu ataque:</h2>
+
             <div>
-                <button id="btn-fire">Fuego 🔥</button>
-                <button id="btn-water">Agua 💧</button>
-                <button id="btn-ground">Tierra 🌱</button>
+                <button class="btn-attack" id="btn-fire">Fuego 🔥</button>
+                <button class="btn-attack" id="btn-water">Agua 💧</button>
+                <button class="btn-attack" id="btn-ground">Tierra 🌱</button>
             </div>
+
             <div>
                 <section id="messages">
                     <!-- Tu mascota atacó con fuego, las mascota del enemigo atacó con tierra - GANASTE 🎉 -->
