--- a/01-fundamentos-de-programacion/mokepon/mokepon.html
+++ b/01-fundamentos-de-programacion/mokepon/mokepon.html
@@ -81,17 +81,17 @@
                 </section>
             </div>
 
-            <div>
-                <div id="player-attack"></div>
-                <div id="enemy-attack"></div>
-                <p>
-                    Tu mascota <span id="pet-player"></span> tiene
-                    <span id="lives-player">3</span> vidas
-                </p>
-                <p>
-                    La mascota <span id="pet-enemy"></span> del enemigo tiene
-                    <span id="lives-enemy">3</span> vidas
-                </p>
+            <div class="attacks">
+                <div>
+                    <p id="lives-player">3</p>
+                    <p id="pet-player"></p>
+                    <div id="player-attack"></div>
+                </div>
+                <div>
+                    <span id="lives-enemy">3</span>
+                    <span id="pet-enemy"></span>
+                    <div id="enemy-attack"></div>
+                </div>
             </div>
         </section>
 
