--- a/01-fundamentos-de-programacion/mokepon/mokepon.html
+++ b/01-fundamentos-de-programacion/mokepon/mokepon.html
@@ -68,7 +68,7 @@
         <section id="attack-select" class="attack-select">
             <h2 class="subtitle">Elige tu ataque:</h2>
 
-            <div>
+            <div class="btn-attacks-container">
                 <button class="btn-attack" id="btn-fire">Fuego 🔥</button>
                 <button class="btn-attack" id="btn-water">Agua 💧</button>
                 <button class="btn-attack" id="btn-ground">Tierra 🌱</button>
@@ -82,12 +82,12 @@
             </div>
 
             <div class="attacks">
-                <div>
+                <div class="player-attacks">
                     <p id="lives-player">3</p>
                     <p id="pet-player"></p>
                     <div id="player-attack"></div>
                 </div>
-                <div>
+                <div class="enemy-attacks">
                     <span id="lives-enemy">3</span>
                     <span id="pet-enemy"></span>
                     <div id="enemy-attack"></div>
