Se agregan imagenes nuevas para cada uno de las mascotas

--- a/01-fundamentos-de-programacion/mokepon/mokepon.html
+++ b/01-fundamentos-de-programacion/mokepon/mokepon.html
@@ -17,14 +17,14 @@
                 <input type="radio" name="mascota" id="hipoge" class="pets" value="hipoge" />
                 <label class="mokepon-card" for="hipoge">
                     <p>Hipoge</p>
-                    <img src="./assets/mokepons_mokepon_hipodoge_attack.png" alt="hipoge" /> </label
+                    <img src="./assets/hipoge.png" alt="hipoge" /> </label
                 ><br />
 
                 <input type="radio" name="mascota" id="capipepo" class="pets" value="capipepo" />
                 <label class="mokepon-card" for="capipepo">
                     <p>Capipepo</p>
                     <img
-                        src="./assets/mokepons_mokepon_capipepo_attack.png"
+                        src="./assets/capipepo.png"
                         alt="capipepo"
                     /> </label
                 ><br />
@@ -33,7 +33,7 @@
                 <label class="mokepon-card" for="ratigueya">
                     <p>Ratigueya</p>
                     <img
-                        src="./assets/mokepons_mokepon_ratigueya_attack.png"
+                        src="./assets/ratigueya.png"
                         alt="ratigueya"
                     /> </label
                 ><br />
@@ -47,19 +47,19 @@
                 />
                 <label class="mokepon-card" for="langostelvis">
                     <p>Langostelvis</p>
-                    <img src="" alt="" /> </label
+                    <img src="./assets/langostelvis.png" alt="" /> </label
                 ><br />
 
                 <input type="radio" name="mascota" id="tucapalma" class="pets" value="tucapalma" />
                 <label class="mokepon-card" for="tucapalma">
                     <p>Tucapalma</p>
-                    <img src="" alt="" /> </label
+                    <img src="./assets/tucapalma.png" alt="" /> </label
                 ><br />
 
                 <input type="radio" name="mascota" id="pydos" class="pets" value="pydos" />
                 <label class="mokepon-card" for="pydos">
                     <p>Pydos</p>
-                    <img src="" alt="" /> </label
+                    <img src="./assets/pydos.png" alt="" /> </label
                 ><br />
             </div>
             <button id="btn-pet" class="btn-pet">Seleccionar</button>
