--- a/01-fundamentos-de-programacion/mokepon/mokepon.html
+++ b/01-fundamentos-de-programacion/mokepon/mokepon.html
@@ -23,19 +23,13 @@
                 <input type="radio" name="mascota" id="capipepo" class="pets" value="capipepo" />
                 <label class="mokepon-card" for="capipepo">
                     <p>Capipepo</p>
-                    <img
-                        src="./assets/capipepo.png"
-                        alt="capipepo"
-                    /> </label
+                    <img src="./assets/capipepo.png" alt="capipepo" /> </label
                 ><br />
 
                 <input type="radio" name="mascota" id="ratigueya" class="pets" value="ratigueya" />
                 <label class="mokepon-card" for="ratigueya">
                     <p>Ratigueya</p>
-                    <img
-                        src="./assets/ratigueya.png"
-                        alt="ratigueya"
-                    /> </label
+                    <img src="./assets/ratigueya.png" alt="ratigueya" /> </label
                 ><br />
 
                 <input
