Se agrega a las imagenes los alt faltantes

--- a/01-fundamentos-de-programacion/mokepon/mokepon.html
+++ b/01-fundamentos-de-programacion/mokepon/mokepon.html
@@ -41,19 +41,19 @@
                 />
                 <label class="mokepon-card" for="langostelvis">
                     <p>Langostelvis</p>
-                    <img src="./assets/langostelvis.png" alt="" /> </label
+                    <img src="./assets/langostelvis.png" alt="langostelvis" /> </label
                 ><br />
 
                 <input type="radio" name="mascota" id="tucapalma" class="pets" value="tucapalma" />
                 <label class="mokepon-card" for="tucapalma">
                     <p>Tucapalma</p>
-                    <img src="./assets/tucapalma.png" alt="" /> </label
+                    <img src="./assets/tucapalma.png" alt="tucapalma" /> </label
                 ><br />
 
                 <input type="radio" name="mascota" id="pydos" class="pets" value="pydos" />
                 <label class="mokepon-card" for="pydos">
                     <p>Pydos</p>
-                    <img src="./assets/pydos.png" alt="" /> </label
+                    <img src="./assets/pydos.png" alt="pydos" /> </label
                 ><br />
             </div>
             <button id="btn-pet" class="btn-pet">Seleccionar</button>
