--- a/01-fundamentos-de-programacion/mokepon/mokepon.html
+++ b/01-fundamentos-de-programacion/mokepon/mokepon.html
@@ -89,6 +89,7 @@
             </div>
         </section>
 
+        <script src="./js/dataMokepon.js"></script>
         <script src="./js/logica.js"></script>
     </body>
 </html>
