--- a/01-fundamentos-de-programacion/mokepon/mokepon.html
+++ b/01-fundamentos-de-programacion/mokepon/mokepon.html
@@ -13,48 +13,7 @@
         <section id="character-select" class="character-select-section">
             <h2 class="subtitle">Elige tu mascota:</h2>
 
-            <div class="cards">
-                <input type="radio" name="mascota" id="hipoge" class="pets" value="hipoge" />
-                <label class="mokepon-card" for="hipoge">
-                    <p>Hipoge</p>
-                    <img src="./assets/hipoge.png" alt="hipoge" /> </label
-                ><br />
-
-                <input type="radio" name="mascota" id="capipepo" class="pets" value="capipepo" />
-                <label class="mokepon-card" for="capipepo">
-                    <p>Capipepo</p>
-                    <img src="./assets/capipepo.png" alt="capipepo" /> </label
-                ><br />
-
-                <input type="radio" name="mascota" id="ratigueya" class="pets" value="ratigueya" />
-                <label class="mokepon-card" for="ratigueya">
-                    <p>Ratigueya</p>
-                    <img src="./assets/ratigueya.png" alt="ratigueya" /> </label
-                ><br />
-
-                <input
-                    type="radio"
-                    name="mascota"
-                    id="langostelvis"
-                    class="pets"
-                    value="langostelvis"
-                />
-                <label class="mokepon-card" for="langostelvis">
-                    <p>Langostelvis</p>
-                    <img src="./assets/langostelvis.png" alt="langostelvis" /> </label
-                ><br />
-
-                <input type="radio" name="mascota" id="tucapalma" class="pets" value="tucapalma" />
-                <label class="mokepon-card" for="tucapalma">
-                    <p>Tucapalma</p>
-                    <img src="./assets/tucapalma.png" alt="tucapalma" /> </label
-                ><br />
-
-                <input type="radio" name="mascota" id="pydos" class="pets" value="pydos" />
-                <label class="mokepon-card" for="pydos">
-                    <p>Pydos</p>
-                    <img src="./assets/pydos.png" alt="pydos" /> </label
-                ><br />
+            <div class="cards" id="cards">
             </div>
             <button id="btn-pet" class="btn-pet">Seleccionar</button>
         </section>
