--- a/01-fundamentos-de-programacion/mokepon/mokepon.html
+++ b/01-fundamentos-de-programacion/mokepon/mokepon.html
@@ -13,19 +13,14 @@
         <section id="character-select" class="character-select-section">
             <h2 class="subtitle">Elige tu mascota:</h2>
 
-            <div class="cards" id="cards">
-            </div>
+            <div class="cards" id="cards"></div>
             <button id="btn-pet" class="btn-pet">Seleccionar</button>
         </section>
 
         <section id="attack-select" class="attack-select">
             <h2 class="subtitle">Elige tu ataque:</h2>
 
-            <div class="btn-attacks-container">
-                <button class="btn-attack" id="btn-fire">Fuego 🔥</button>
-                <button class="btn-attack" id="btn-water">Agua 💧</button>
-                <button class="btn-attack" id="btn-ground">Tierra 🌱</button>
-            </div>
+            <div class="btn-attacks-container" id="btn-attacks-container-id"></div>
 
             <div class="section-messages" id="messages">
                 <p id="result">Mucha suerte</p>
