--- a/01-fundamentos-de-programacion/mokepon/mokepon.html
+++ b/01-fundamentos-de-programacion/mokepon/mokepon.html
@@ -17,6 +17,13 @@
             <button id="btn-pet" class="btn-pet">Seleccionar</button>
         </section>
 
+        <section id="see-map" class="section-see-map">
+            <h1 class="subtitle">
+                Recorre el mapa con tu mokepon
+            </h1>
+            <canvas id="map" class="map-canvas"></canvas>
+        </section>
+
         <section id="attack-select" class="attack-select">
             <h2 class="subtitle">Elige tu ataque:</h2>
 
