--- a/01-fundamentos-de-programacion/mokepon/mokepon.html
+++ b/01-fundamentos-de-programacion/mokepon/mokepon.html
@@ -22,6 +22,7 @@
                 Recorre el mapa con tu mokepon
             </h1>
             <canvas id="map" class="map-canvas"></canvas>
+            <button onClick="moveCharacter()" >Mover</button>
         </section>
 
         <section id="attack-select" class="attack-select">
